03-clustersvc.yml
apiVersion: v1
kind: Service
metadata:
  name: demoapp
  namespace: demoapp
spec:
  selector:
    app: demoapp
  ports:
  - name: http
    port: 80
    targetPort: 80
  type: ClusterIP
