04-ingress-external.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demoapp-ingress
  namespace: demoapp
  annotations:
    ingress.kubernetes.io/class: nginx
    # nginx.ingress.kubernetes.io/whitelist-source-range: 118.201.137.114/32
spec:
  ingressClassName: nginx
  rules:
  - host: demo.devops.ifun.works
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: demoapp
            port:
              name: http
