04-ingress-internal.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demoapp-ingress-internal
  namespace: demoapp
  annotations:
    ingress.kubernetes.io/class: nginx-internal
spec:
  ingressClassName: nginx-internal
  rules:
  - host: demo.internal.devops.ifun.works
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: demoapp
            port:
              name: http
